# Arth-AFS

./: .env.example  .gitignore  .safety-policy  Caddyfile.demo  Dockerfile  Dockerfile.demo  Dockerfile.web  NEXT_AGENT_BRIEF.md  PRIVACY.md  README.md  alembic.ini  docker-compose.demo.yml  docker-compose.yml  fly.demo.toml  fly.staging.toml  fly.toml  pyproject.toml  requirements.txt  update.sh
.github/: dependabot.yml
.github/workflows/: ci.yml
agent/: config.py  core.py  llm.py
alembic/: env.py
alembic/versions/: .gitkeep
api/: README.md  auth.py  database.py  demo.py  dependencies.py  main.py  models.py  onboarding_goal_templates.py
api/routes/: chat_ws.py  demo.py  goal_links.py  goal_tree.py  goals.py  holdings.py  investment_transactions.py  liabilities.py  life_events.py  liquidity.py  metrics.py  onboarding.py  pipeline.py  prices.py  recurring.py  scraper.py  scraper_config.py  setup.py  simulate.py  surplus.py  transactions.py  user_config.py
api/services/: account_user_map.py  agent_runtime.py  chart_metrics.py  chat_service.py  classifier_runtime.py  email_import_flow_log.py  encryption.py  goal_decomposer.py  goal_evaluator.py  goal_graph.py  historical_portfolio.py  holdings_metrics.py  holdings_sync.py  inflation_service.py  liquidity_service.py  net_worth.py  nse_equity_reference.py  onboarding_merchant_propagation.py  ppf_ledger_basis.py  (+11 more)
dashboard/: README.md  next.config.ts  package-lock.json  package.json
data/: gmail_credentials.json
docs/: DEMO_DEPLOY.md  README.md  arth_prd_v_1.md  arth_trd_v_1.md
parsers/: README.md  email_registry.py
pipeline/: README.md  bhav_isin_map.py  config.py  consolidate_bhav_cache.py  db_writer.py  detection.py  holding_pipeline.py  holding_upload_ingest.py  icici_symbol_overrides.py  investment_txn_linking.py  isin_nse_resolver.py  llm_classifier.py  llm_errors.py  logging_config.py  market_cap_data.py  models.py  pdf_upload_unlock.py  prompts.py  review_confidence.py  rules_classifier.py  run.py  transformer.py  validator.py  writer.py
prompts/: README.md  classify_single_pass.yaml  few_shot_examples.yaml
scraper/: README.md  config.py  config_loader.py  discovery.py  email_router.py  gap_detector.py  gmail_client.py  onboarding_orchestrator.py  orchestrator.py  pdf_passwords.py  pdf_utils.py  scheduler.py  source_builder.py
scripts/: README.md  backfill_investment_txn_holding_ids.py  backfill_price_history.py  benchmark_nse_backfill_one_symbol.py  ci_local.sh  clear_scraper_ledger_for_rescrape.py  compare_onboarding.py  demo_portfolio_plan.py  discover_emails.py  docker_demo_entrypoint.sh  email_parser_fixtures_manifest.yaml  explore_icici_direct_statements.py  generate_demo_seed.py  init-db.sql  materialize_demo_market_from_prices.py  migrate_db.py  migrate_goals_v2.py  migrate_sashank_config_to_db.py  print_benchmark_chain_summary.py  refresh_nse_equity_reference.py  remediate_onboarding_portfolio.py  remediate_symbol_aliases.py  reset_onboarding_email_import.py  reset_setup_completed.py  sbi_onboarding_pdf_probe.py  sync_email_parser_fixtures.py  test_email_depth.py  test_pdf_decrypt.py  validate_email_statement.py  validate_icici_direct_statements_vs_db.py  validate_price_sources.py
tests/: README.md  __init__.py  conftest.py  email_parser_test_accounts.py  test_api.py  test_asset_layer_api.py  test_bhav_isin_map.py  test_chat_persistence.py  test_classification_batch.py  test_classification_pipeline_no_llm.py  test_cli.py  test_db_and_api.py  test_demo_mode.py  test_discovery.py  test_email_parsers.py  test_encryption.py  test_find_person_in_desc.py  test_gap_detector.py  test_goal_decompose_api.py  test_goal_hierarchy.py  test_goal_hierarchy_api.py  test_hdfc_cc_statement_email_parser.py  test_hdfc_combined_statement_email_parser.py  test_holding_parsers.py  test_icici_direct_equity_statement_pdf.py  test_icici_direct_statement_email_parsers.py  test_icici_statement_email_parser.py  test_inflation_service.py  test_investment_txn_dedupe.py  test_investment_txn_linking.py  test_isin_nse_resolver.py  test_isin_symbol_repair.py  test_liquidity_api.py  test_models.py  test_nse_equity_reference.py  test_onboarding_flow.py  test_onboarding_orchestrator.py  test_onboarding_portfolio_derive.py  test_orchestrator.py  test_pdf_password_name_variants.py  (+12 more)
(+158 files in other folders)
